Update PureReplace and add a few more messages to samples

--- a/samples/sample.html
+++ b/samples/sample.html
@@ -101,6 +101,33 @@
             </div>
             <p>Kiss It Simple Stupid!</p>
         </div>
+
+        <div class="thread">
+            John Smith, Foo Bar
+            <div class="message">
+                <div class="message_header"><span class="user">Foo Bar</span><span class="meta">Wednesday, 19 September 2012 at 14:00 EDT</span>
+                </div>
+            </div>
+            <p>Sorry, didn't reply, I was busy.</p>
+
+            <div class="message">
+                <div class="message_header"><span class="user">John Smith</span><span class="meta">Wednesday, 19 September 2012 at 14:00 EDT</span>
+                </div>
+            </div>
+            <p>It's okay, I've been too</p>
+
+            <div class="message">
+                <div class="message_header"><span class="user">Foo Bar</span><span class="meta">Wednesday, 19 September 2012 at 14:00 EDT</span>
+                </div>
+            </div>
+            <p>Alright, well good-bye!</p>
+
+            <div class="message">
+                <div class="message_header"><span class="user">John Smith</span><span class="meta">Wednesday, 19 September 2012 at 14:00 EDT</span>
+                </div>
+            </div>
+            <p>Ciao!</p>
+        </div>
     </div>
 </div>
 </body>
