--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <title>fddp</title>
     <meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0"/>
 
+    <script src="//code.jquery.com/jquery.min.js"></script>
     <link href="index.css" rel="stylesheet">
 </head>
 <body>
@@ -12,6 +13,6 @@
 <div id="pr-data"></div>
 
 <script src="PureReplace.js"></script>
-
+<script src="main.js"></script>
 </body>
 </html>
