--- a/public/pages/convert.html
+++ b/public/pages/convert.html
@@ -4,7 +4,7 @@
     <br/>
     <br/>
 
-    <form action="/convert" method="POST" enctype="multipart/form-data">
+    <form action="/convert" id="convertForm" method="POST" enctype="multipart/form-data">
         <input type="file" name="messages" accept="text/html">
         <input type="submit" value="Convert to JSON">
     </form>
