Progress on show page

--- a/public/pages/convert.html
+++ b/public/pages/convert.html
@@ -5,7 +5,7 @@
     <br/>
 
     <form action="/convert" id="convertForm" method="POST" enctype="multipart/form-data">
-        <input type="file" name="messages" accept="text/html">
+        <input type="file" id="file" name="messages" accept="text/html">
         <input type="submit" value="Convert to JSON">
     </form>
 </div>
