Make online convert ajax work! Weird bug though

--- a/public/pages/show.html
+++ b/public/pages/show.html
@@ -3,5 +3,5 @@
     <a href="#convert">Back to convert</a>
     <br>
     do something with messages. you are
-    <div id="whoami"></div>
+    <span id="whoami"></span>
 </div>
