Fix bugs + new version of PureReplace

--- a/public/pages/show.html
+++ b/public/pages/show.html
@@ -2,6 +2,5 @@
     <h1>Messages</h1>
     <a href="#convert">Back to convert</a>
     <br>
-    do something with messages. you are
-    <span id="whoami"></span>
+    do something with messages. you are <span id="whoami"></span>
 </div>
