Added web ui - working

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0"/>
 
     <script src="//code.jquery.com/jquery.min.js"></script>
+    <script src="E.js"></script>
     <link href="index.css" rel="stylesheet">
 </head>
 <body>
