--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -2,7 +2,7 @@
     <h1><code>fddp</code></h1>
     Pages
     <ul>
-        <li><a href="#convert">Convert</a></li>
+        <li><a href="#import">Import</a></li>
         <li><a href="#about">About page</a></li>
     </ul>
 
