--- a/public/pages/show.html
+++ b/public/pages/show.html
@@ -1,6 +1,7 @@
 <div>
-    <h1>Messages</h1>
-    <a href="#convert">Back to convert</a>
+    <h1>Welcome <span id="fddp-whoami"></span></h1>
+    <a href="#import">Back to import</a>
+    <a href="#home">Back to home</a>
     <br>
-    do something with messages. you are <span id="whoami"></span>
+    <ul id="fddp-threads"></ul>
 </div>
