Make messages not all on the DOM (better web ui performance!) +  allow saving to file

--- a/public/pages/show.html
+++ b/public/pages/show.html
@@ -2,6 +2,7 @@
     <h1>Welcome <span id="fddp-whoami"></span></h1>
     <a href="#import">Back to import</a>
     <a href="#home">Back to home</a>
+    <a href="#" id="fddp-save">Download JSON</a>
     <br>
     <ul id="fddp-threads"></ul>
 </div>
