--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <title>fddp</title>
     <meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0"/>
 
-    <script src="//code.jquery.com/jquery.min.js"></script>
+    <script src="//code.jquery.com/jquery.js"></script>
     <script src="E.js"></script>
     <link href="index.css" rel="stylesheet">
 </head>
