--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,16 @@
 
     <script src="//code.jquery.com/jquery.js"></script>
     <script src="jquery.tooltipster.js"></script>
+    <script src="moment.js"></script>
+    <script src="PureReplace.js"></script>
+    <script src="main.js"></script>
     <script src="E.js"></script>
     <link href="index.css" rel="stylesheet">
+    <link href="tooltipster.css" rel="stylesheet"/>
 </head>
 <body>
 
 <div id="pr-data"></div>
 
-<script src="PureReplace.js"></script>
-<script src="main.js"></script>
 </body>
 </html>
