--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -1,4 +1,6 @@
-<div>
-    <h1>About page</h1>
-    <a href="#home">Back to home</a>
+<div class="container">
+    <div>
+        <h1>About page</h1>
+        <a href="#home">Back to home</a>
+    </div>
 </div>
