--- a/public/pages/show.html
+++ b/public/pages/show.html
@@ -1,8 +1,10 @@
-<div>
-    <h1>Welcome <span id="fddp-whoami"></span></h1>
-    <a href="#import">Back to import</a>
-    <a href="#home">Back to home</a>
-    <a href="#" id="fddp-save">Download JSON</a>
-    <br>
-    <ul id="fddp-threads"></ul>
+<div class="container">
+    <div>
+        <h1>Showing messages for <span id="fddp-whoami"></span></h1>
+        <a href="#import" class="btn btn-primary">Back to import</a>
+        <a href="#home" class="btn btn-success">Back to home</a>
+        <a href="#" id="fddp-save" class="btn btn-info">Download JSON</a>
+        <br>
+        <ul id="fddp-threads"></ul>
+    </div>
 </div>
