--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -1,9 +1,9 @@
-<div>
-    <h1><code>fddp</code></h1>
-    Pages
-    <ul>
-        <li><a href="#import">Import</a></li>
-        <li><a href="#about">About page</a></li>
-    </ul>
 
+<!-- Main jumbotron for a primary marketing message or call to action -->
+<div class="jumbotron">
+    <div class="container">
+        <h1>Welcome to <code>fddp</code></h1>
+        <p>Some text here</p>
+        <p><a class="btn btn-primary btn-lg" href="#import" role="button">Import Data &raquo;</a></p>
+    </div>
 </div>
