Fix some support for Bootstrap web ui

--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div>
         <h1>About page</h1>
-        <a href="#home">Back to home</a>
+        <a href="#home" class="btn btn-success">Back to home</a>
     </div>
 </div>
