--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -3,7 +3,7 @@
 <div class="jumbotron">
     <div class="container">
         <h1>Welcome to <code>fddp</code></h1>
-        <p>Some text here</p>
+        <p>Facebook Downloaded Data Processor</p>
         <p><a class="btn btn-primary btn-lg" href="#import" role="button">Import Data &raquo;</a></p>
     </div>
 </div>
