Add commas in number of messages

--- a/public/pages/import.html
+++ b/public/pages/import.html
@@ -19,7 +19,7 @@
                 <label for="messagesJson">JSON</label>
                 <input type="file" class="form-control" id="messagesJson" name="messages" accept="application/json">
             </div>
-            <button type="submit" class="btn btn-default">Load from HTML</button>
+            <button type="submit" class="btn btn-default">Load from JSON</button>
         </form>
     </div>
 </div>
