--- a/public/index.html
+++ b/public/index.html
@@ -8,15 +8,15 @@
 
     <script src="//code.jquery.com/jquery.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <script src="moment.js"></script>
-    <script src="PureReplace.js"></script>
+    <script src="vendor/moment.js"></script>
+    <script src="vendor/PureReplace.js"></script>
     <script src="main.js"></script>
-    <script src="bootstrap.file-input.js"></script>
-    <script src="E.js"></script>
+    <script src="vendor/bootstrap.file-input.js"></script>
+    <script src="vendor/E.js"></script>
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <link href="index.css" rel="stylesheet"/>
-    <link href="tooltipster.css" rel="stylesheet"/>
+    <link href="vendor/tooltipster.css" rel="stylesheet"/>
 
 
 </head>
