--- a/samples/sample.html
+++ b/samples/sample.html
@@ -33,37 +33,37 @@
         <div class="thread">
             John Smith, Foo Bar
             <div class="message">
-                <div class="message_header"><span class="user">John Smith</span><span class="meta">Monday, September 17 2012 at 17:00 EDT</span>
+                <div class="message_header"><span class="user">John Smith</span><span class="meta">Monday, September 17, 2012 at 17:00 EDT</span>
                 </div>
             </div>
             <p>Hello!</p>
 
             <div class="message">
-                <div class="message_header"><span class="user">John Smith</span><span class="meta">Monday, September 17 2012 at 17:01 EDT</span>
+                <div class="message_header"><span class="user">John Smith</span><span class="meta">Monday, September 17, 2012 at 17:01 EDT</span>
                 </div>
             </div>
             <p>How are you?</p>
 
             <div class="message">
-                <div class="message_header"><span class="user">Foo Bar</span><span class="meta">Monday, September 17 2012 at 17:06 EDT</span>
+                <div class="message_header"><span class="user">Foo Bar</span><span class="meta">Monday, September 17, 2012 at 17:06 EDT</span>
                 </div>
             </div>
             <p>Hey, sorry for being late</p>
 
             <div class="message">
-                <div class="message_header"><span class="user">Foo Bar</span><span class="meta">Monday, September 17 2012 at 17:06 EDT</span>
+                <div class="message_header"><span class="user">Foo Bar</span><span class="meta">Monday, September 17, 2012 at 17:06 EDT</span>
                 </div>
             </div>
             <p>I'm fine</p>
 
             <div class="message">
-                <div class="message_header"><span class="user">Foo Bar</span><span class="meta">Monday, September 17 2012 at 17:07 EDT</span>
+                <div class="message_header"><span class="user">Foo Bar</span><span class="meta">Monday, September 17, 2012 at 17:07 EDT</span>
                 </div>
             </div>
             <p>How about you?</p>
 
             <div class="message">
-                <div class="message_header"><span class="user">John Smith</span><span class="meta">Monday, September 17 2012 at 17:08 EDT</span>
+                <div class="message_header"><span class="user">John Smith</span><span class="meta">Monday, September 17, 2012 at 17:08 EDT</span>
                 </div>
             </div>
             <p>I'm doing great thanks!</p>
@@ -72,31 +72,31 @@
         <div class="thread">
             John Smith, Linus Torvalds
             <div class="message">
-                <div class="message_header"><span class="user">Linus Torvalds</span><span class="meta">Tuesday, September 18 2012 at 11:44 EDT</span>
+                <div class="message_header"><span class="user">Linus Torvalds</span><span class="meta">Tuesday, September 18, 2012 at 11:44 EDT</span>
                 </div>
             </div>
             <p>Hey John, did you check out my pull request?</p>
 
             <div class="message">
-                <div class="message_header"><span class="user">John Smith</span><span class="meta">Tuesday, September 18 2012 at 11:45 EDT</span>
+                <div class="message_header"><span class="user">John Smith</span><span class="meta">Tuesday, September 18, 2012 at 11:45 EDT</span>
                 </div>
             </div>
             <p>I sure did!</p>
 
             <div class="message">
-                <div class="message_header"><span class="user">John Smith</span><span class="meta">Tuesday, September 18 2012 at 11:45 EDT</span>
+                <div class="message_header"><span class="user">John Smith</span><span class="meta">Tuesday, September 18, 2012 at 11:45 EDT</span>
                 </div>
             </div>
             <p>I'm thinking that you could probably change how the counting of events happens</p>
 
             <div class="message">
-                <div class="message_header"><span class="user">Linus Torvalds</span><span class="meta">Tuesday, September 18 2012 at 11:46 EDT</span>
+                <div class="message_header"><span class="user">Linus Torvalds</span><span class="meta">Tuesday, September 18, 2012 at 11:46 EDT</span>
                 </div>
             </div>
             <p>I agree, I wasn't too sure on how to handle it. If I just use ++ would that work fine?</p>
 
             <div class="message">
-                <div class="message_header"><span class="user">John Smith</span><span class="meta">Tuesday, September 18 2012 at 11:47 EDT</span>
+                <div class="message_header"><span class="user">John Smith</span><span class="meta">Tuesday, September 18, 2012 at 11:47 EDT</span>
                 </div>
             </div>
             <p>Kiss It Simple Stupid!</p>
@@ -105,25 +105,25 @@
         <div class="thread">
             John Smith, Foo Bar
             <div class="message">
-                <div class="message_header"><span class="user">Foo Bar</span><span class="meta">Wednesday, September 19 2012 at 14:00 EDT</span>
+                <div class="message_header"><span class="user">Foo Bar</span><span class="meta">Wednesday, September 19, 2012 at 14:00 EDT</span>
                 </div>
             </div>
             <p>Sorry, didn't reply, I was busy.</p>
 
             <div class="message">
-                <div class="message_header"><span class="user">John Smith</span><span class="meta">Wednesday, September 19 2012 at 14:00 EDT</span>
+                <div class="message_header"><span class="user">John Smith</span><span class="meta">Wednesday, September 19, 2012 at 14:00 EDT</span>
                 </div>
             </div>
             <p>It's okay, I've been too</p>
 
             <div class="message">
-                <div class="message_header"><span class="user">Foo Bar</span><span class="meta">Wednesday, September 19 2012 at 14:00 EDT</span>
+                <div class="message_header"><span class="user">Foo Bar</span><span class="meta">Wednesday, September 19, 2012 at 14:00 EDT</span>
                 </div>
             </div>
             <p>Alright, well good-bye!</p>
 
             <div class="message">
-                <div class="message_header"><span class="user">John Smith</span><span class="meta">Wednesday, September 19 2012 at 14:00 EDT</span>
+                <div class="message_header"><span class="user">John Smith</span><span class="meta">Wednesday, September 19, 2012 at 14:00 EDT</span>
                 </div>
             </div>
             <p>Ciao!</p>
